--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
+    "react-native-shadow": "^1.2.2",
     "react-native-svg": "^13.10.0",
     "react-native-vector-icons": "^10.0.0"
   },
